--- a/new-site/css/features.css
+++ b/new-site/css/features.css
@@ -400,12 +400,13 @@ h5{
 a{
 	color: #232323;
 	/* text-decoration: underline; */
-	/* border-bottom: 1px solid #232323; */
+	border-bottom: 1px solid #232323;
 	transition: all .2s ease-in-out;
 }
 
 a:hover{
-	color:#BC981F;
+	/* color:#BC981F; */
+	border-bottom: 1px solid rgba(0,0,0,0);
 }
 
 a:visited{
