--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -19,6 +19,7 @@
 	border-bottom: solid 1px #666; */
 	/* box-shadow: 0px -1px 4px #909090; */
 	border-bottom: 1px solid #f3f3f3;
+	line-height: 1;
 }
 .header-logo{
 	display: inline-block;
@@ -40,6 +41,8 @@
 .header-links-container a {
 	color:#232323;
 	letter-spacing: .5px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0);
+	transition: .2s ease-in-out;
 }
 
 .header-links-container a:link {
@@ -51,7 +54,7 @@
 }
 
 .header-links-container a:hover {
-    /* text-decoration: underline; */
+    border-bottom: 1px solid #232323;
 }
 
 .header-links-container a:active {
@@ -94,9 +97,10 @@
 .header-links ul li {
 	text-align: left;
 	padding: 5px;
+	line-height: 1.4;
 	padding-left: 10px;
-  background: #f7f7f7;
-  display: block;
+	background: #f7f7f7;
+	display: block;
 	z-index:99;
 }
 /*.header-links ul li:hover { background: #666; }*/
@@ -106,8 +110,8 @@
   visibility: visible;
 }
 
-.link-active{
-	text-decoration: underline !important;
+a.link-active{
+	border-bottom: 1px solid #232323;
 }
 
 .list-triangle:after{
@@ -138,7 +142,6 @@
 	}
 
 	.header-links ul {
-		top:12px;
-
+		top: 10px;
 	}
 }
