--- a/new-site/events/css/pages-events.css
+++ b/new-site/events/css/pages-events.css
@@ -947,7 +947,7 @@ height:280px;
 
 a {transition: .3s ease-in-out;text-decoration: none;color: #232323;}
 
-a:hover {
+p a:hover{
 	/* color: #e25813; */
 	border-bottom: 1px solid rgba(0,0,0,0);
 }
