added header to events

--- a/new-site/css/header.css
+++ b/new-site/css/header.css
@@ -1,4 +1,8 @@
 /*----------- START TOP NAV ------------------------------------------*/
+body{
+	    text-rendering: geometricPrecision;
+}
+
 .header-container {
 	text-transform: uppercase;
 	padding: 0.5em 1em;
