--- a/new-site/events/css/pages-events.css
+++ b/new-site/events/css/pages-events.css
@@ -2,7 +2,7 @@ body{
 	background-color:#FFF;
 	font-size: 16px;
 	color: #000;
-	font-family: 'NewsGothicBT-RomanCondensed', sans-serif;
+	font-family: 'GT-Haptik-Light', sans-serif;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	min-height: 540px;
 	height: 100%;
@@ -745,7 +745,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 
 .centered{
 	background-color: #f8f8f8;
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .centered p{
