--- a/new-site/events/css/pages-events.css
+++ b/new-site/events/css/pages-events.css
@@ -1107,3 +1107,26 @@ a p {
   -webkit-animation-name: fadeInUp;
   animation-name: fadeInUp;
 }
+
+
+
+
+/*====*/
+
+.video-container {
+position: relative;
+padding-bottom: 52.25%;
+padding-top: 30px;
+height: 0;
+overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
