added images & text changes

--- a/new-site/css/features.css
+++ b/new-site/css/features.css
@@ -393,6 +393,12 @@ p.pg-box-content {
 	z-index: 37;
 }
 
+/*-----------    30    --------------*/
+#page31 {
+	display:none;
+	z-index: 38;
+}
+
 /*-----------    EDITORIAL   --------------*/
 p.italics{
 	font-style: italic;
