--- a/new-site/css/features.css
+++ b/new-site/css/features.css
@@ -583,6 +583,10 @@ div.text-box-a a:link, div.text-box-a a:visited {
 	/* text-align:left; */
 }
 
+#pg-interview p:last-child{
+	margin-bottom: 60px;
+}
+
 .pg-caption-left {
 	float:left;
 	text-align:left;
