--- a/new-site/events/css/pages-events.css
+++ b/new-site/events/css/pages-events.css
@@ -1031,6 +1031,14 @@ a p {
 }
 
 /* Media Queries */
+@media (min-width:740px){
+	.details-card.event-card {
+		margin: 60vw auto 0;
+		padding: 0;
+		max-width: 800px;
+	}
+}
+
 
 @media (min-width:1240px) {
 
