--- a/new-site/css/homepage.css
+++ b/new-site/css/homepage.css
@@ -469,7 +469,12 @@ button:hover{
 
   .feature-small .title{
     max-height: 130px;
-    width: 230px;
+    width: 160px;
+  }
+
+  .feature-large .title{
+    max-height: 130px;
+    width: 160px;
   }
 
   .feature-card .preview{
